syntax = "proto3";

option java_package = "io.github.hyuck9.hanimani.common.data.preference.model";
option java_multiple_files = true;

message FontSizePreference {

  enum FontSize {
    SMALL = 0;
    MEDIUM = 1;
    LARGE = 2;
  }

  FontSize fontSize = 1;
}