syntax = "proto3";

option java_package = "io.github.hyuck9.hanimani.common.data.preference.model";
option java_multiple_files = true;

message TextAlignPreference {

  enum TaskAlign {
    START = 0;
    CENTER = 1;
    END = 2;
  }

  TaskAlign taskAlign = 1;
}