syntax = "proto3";

option java_package = "io.github.hyuck9.hanimani.common.data.preference.model";
option java_multiple_files = true;

message ThemePreference {

  enum ThemeColor {
    SYSTEM = 0;
    WALLPAPER = 1;
    LIGHT = 2;
    TWILIGHT = 3;
    NIGHT = 4;
    SUNRISE = 5;
    AURORA = 6;
    PINK = 7;
    PURPLE = 8;
    BLUE = 9;
  }

  ThemeColor themeColor = 1;
}